[gd_scene format=3 uid="uid://b1osttivh25l5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_45i86"]
[ext_resource type="PackedScene" uid="uid://ms6j827p8ja2" path="res://scenes/PlayingCard.tscn" id="2_sv1m6"]
[ext_resource type="Script" uid="uid://c3cfk6nc7vnpj" path="res://scripts/playing_card_data.gd" id="3_a8wo8"]
[ext_resource type="Resource" uid="uid://bknm0e2p6j3tt" path="res://card_types/Analog_Blood_Pressure_Monitor.tres" id="4_attvq"]
[ext_resource type="Resource" uid="uid://p1ickdo45y7l" path="res://card_types/Electronic_Blood_Pressure_Monitor.tres" id="5_bneo8"]
[ext_resource type="Resource" uid="uid://dcqfw8ivlnq81" path="res://card_types/First_Aid_Kit.tres" id="6_ocgqw"]
[ext_resource type="Resource" uid="uid://dw2q0ehr2t20l" path="res://card_types/Heart_Monitor.tres" id="7_jbgew"]
[ext_resource type="Resource" uid="uid://ba5tmurhrdc8d" path="res://card_types/Medical_Ventilator.tres" id="8_a85ww"]
[ext_resource type="Resource" uid="uid://qbpi37j7ekie" path="res://card_types/Otoscope.tres" id="9_jhsr3"]
[ext_resource type="Resource" uid="uid://dmo8f5xnl40dj" path="res://card_types/Parenteral_Nutrition_Bags.tres" id="10_0bq3a"]
[ext_resource type="Resource" uid="uid://bx17xcrlsl00n" path="res://card_types/Pills.tres" id="11_754j2"]
[ext_resource type="Resource" uid="uid://jldbvkhx0x1k" path="res://card_types/Pulse_Oximeter.tres" id="12_i4jil"]
[ext_resource type="Resource" uid="uid://bl6w8sgvo8nbn" path="res://card_types/Reflex_Hammer.tres" id="13_jai3c"]
[ext_resource type="Resource" uid="uid://b6g6n6pv323lm" path="res://card_types/Scalpel.tres" id="14_1gdd5"]
[ext_resource type="Resource" uid="uid://cirqwdykqopga" path="res://card_types/Stethoscope.tres" id="15_426vi"]
[ext_resource type="Resource" uid="uid://d2vh2o5ps5yh8" path="res://card_types/Surgical_Rake_Retractor.tres" id="16_naigu"]
[ext_resource type="Resource" uid="uid://bi0nla7u2njh3" path="res://card_types/Syringe.tres" id="17_m1oc7"]
[ext_resource type="Resource" uid="uid://ceeppnfig4so0" path="res://card_types/Thermometer.tres" id="18_kbe8o"]
[ext_resource type="Resource" uid="uid://dqkkyu2u3nu5l" path="res://card_types/Wheelchair.tres" id="19_7f8l2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cxum0"]
load_path = "res://.godot/imported/background_image.png-70d3ada7d49fedb5b622b46a5065e70b.ctex"

[node name="Main" type="Node2D" unique_id=942970590]
script = ExtResource("1_45i86")
card_scene = ExtResource("2_sv1m6")
all_card_data = Array[ExtResource("3_a8wo8")]([ExtResource("4_attvq"), ExtResource("4_attvq"), ExtResource("5_bneo8"), ExtResource("5_bneo8"), ExtResource("6_ocgqw"), ExtResource("6_ocgqw"), ExtResource("7_jbgew"), ExtResource("7_jbgew"), ExtResource("8_a85ww"), ExtResource("8_a85ww"), ExtResource("9_jhsr3"), ExtResource("9_jhsr3"), ExtResource("10_0bq3a"), ExtResource("10_0bq3a"), ExtResource("11_754j2"), ExtResource("11_754j2"), ExtResource("12_i4jil"), ExtResource("12_i4jil"), ExtResource("13_jai3c"), ExtResource("13_jai3c"), ExtResource("14_1gdd5"), ExtResource("14_1gdd5"), ExtResource("15_426vi"), ExtResource("15_426vi"), ExtResource("16_naigu"), ExtResource("16_naigu"), ExtResource("17_m1oc7"), ExtResource("17_m1oc7"), ExtResource("18_kbe8o"), ExtResource("18_kbe8o"), ExtResource("19_7f8l2"), ExtResource("19_7f8l2")])

[node name="UIElements" type="Node2D" parent="." unique_id=102820595]

[node name="Background" type="Sprite2D" parent="UIElements" unique_id=1334144763]
position = Vector2(1495.5, 460.5)
texture = SubResource("CompressedTexture2D_cxum0")

[node name="DiscardPileLabel" type="Label" parent="UIElements" unique_id=1794295216]
offset_left = 346.0
offset_top = 861.0
offset_right = 568.0
offset_bottom = 938.0
theme_override_font_sizes/font_size = 32
text = "Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="UIElements" unique_id=196911267]
offset_left = 340.0
offset_top = 47.0
offset_right = 554.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="GridContainer" type="Node2D" parent="." unique_id=705967233]
position = Vector2(658, 1011)

[node name="DrawPile" type="Node2D" parent="." unique_id=1597279471]
position = Vector2(448, 1011)

[node name="RoomCards" type="Node2D" parent="." unique_id=2093494702]

[node name="Wheelchair" parent="RoomCards" unique_id=785310779 instance=ExtResource("2_sv1m6")]
position = Vector2(2134, 213)
card_data = ExtResource("19_7f8l2")
in_deck = false
is_reversible = false

[node name="Parenteral_Nutrition_Bags" parent="RoomCards" unique_id=2033915439 instance=ExtResource("2_sv1m6")]
position = Vector2(2240, 791)
card_data = ExtResource("10_0bq3a")
in_deck = false
is_reversible = false

[node name="Pills" parent="RoomCards" unique_id=646385248 instance=ExtResource("2_sv1m6")]
position = Vector2(2246, 477)
card_data = ExtResource("11_754j2")
in_deck = false
is_reversible = false

[node name="First_Aid_Kit" parent="RoomCards" unique_id=720859274 instance=ExtResource("2_sv1m6")]
position = Vector2(1445, 271)
card_data = ExtResource("6_ocgqw")
in_deck = false
is_reversible = false

[node name="Pulse_Oximeter" parent="RoomCards" unique_id=142648693 instance=ExtResource("2_sv1m6")]
position = Vector2(986, 785)
card_data = ExtResource("12_i4jil")
in_deck = false
is_reversible = false

[node name="Syringe" parent="RoomCards" unique_id=1095770929 instance=ExtResource("2_sv1m6")]
position = Vector2(1784.9999, 274)
card_data = ExtResource("17_m1oc7")
in_deck = false
is_reversible = false

[node name="Thermometer" parent="RoomCards" unique_id=1802924047 instance=ExtResource("2_sv1m6")]
position = Vector2(936, 276)
card_data = ExtResource("18_kbe8o")
in_deck = false
is_reversible = false

[node name="Heart_Monitor" parent="RoomCards" unique_id=1317955863 instance=ExtResource("2_sv1m6")]
position = Vector2(1389, 775)
card_data = ExtResource("7_jbgew")
in_deck = false
is_reversible = false

[node name="Stethoscope" parent="RoomCards" unique_id=238534739 instance=ExtResource("2_sv1m6")]
position = Vector2(756, 718)
card_data = ExtResource("15_426vi")
in_deck = false
is_reversible = false

[node name="Analog_Blood_Pressure_Monitor" parent="RoomCards" unique_id=1176211499 instance=ExtResource("2_sv1m6")]
position = Vector2(1586, 777)
card_data = ExtResource("4_attvq")
in_deck = false
is_reversible = false

[node name="Scalpel" parent="RoomCards" unique_id=1033975257 instance=ExtResource("2_sv1m6")]
position = Vector2(1851, 762)
card_data = ExtResource("14_1gdd5")
in_deck = false
is_reversible = false

[node name="Medical_Ventilator" parent="RoomCards" unique_id=710549534 instance=ExtResource("2_sv1m6")]
position = Vector2(1187, 777)
card_data = ExtResource("8_a85ww")
in_deck = false
is_reversible = false

[node name="DeckCards" type="Node2D" parent="." unique_id=1514930145]
visible = false

[node name="Medical_Ventilator" parent="DeckCards" unique_id=1644142729 instance=ExtResource("2_sv1m6")]
position = Vector2(673, 1051)
card_data = ExtResource("8_a85ww")

[node name="Medical_Ventilator2" parent="DeckCards" unique_id=963711276 instance=ExtResource("2_sv1m6")]
position = Vector2(673, 1051)
card_data = ExtResource("8_a85ww")

[node name="Wheelchair" parent="DeckCards" unique_id=161291420 instance=ExtResource("2_sv1m6")]
position = Vector2(1343, 1063)
card_data = ExtResource("19_7f8l2")

[node name="Wheelchair2" parent="DeckCards" unique_id=1046360555 instance=ExtResource("2_sv1m6")]
position = Vector2(1343, 1063)
card_data = ExtResource("19_7f8l2")

[node name="Parenteral_Nutrition_Bags" parent="DeckCards" unique_id=195083557 instance=ExtResource("2_sv1m6")]
position = Vector2(1690, 1067)
card_data = ExtResource("10_0bq3a")

[node name="Parenteral_Nutrition_Bags2" parent="DeckCards" unique_id=1870747173 instance=ExtResource("2_sv1m6")]
position = Vector2(1690, 1067)
card_data = ExtResource("10_0bq3a")

[node name="Pills" parent="DeckCards" unique_id=69860669 instance=ExtResource("2_sv1m6")]
position = Vector2(1516, 1066)
card_data = ExtResource("11_754j2")

[node name="Pills2" parent="DeckCards" unique_id=1994485012 instance=ExtResource("2_sv1m6")]
position = Vector2(1516, 1066)
card_data = ExtResource("11_754j2")

[node name="First_Aid_Kit" parent="DeckCards" unique_id=199082105 instance=ExtResource("2_sv1m6")]
position = Vector2(1014, 1053)
card_data = ExtResource("6_ocgqw")

[node name="First_Aid_Kit2" parent="DeckCards" unique_id=303049617 instance=ExtResource("2_sv1m6")]
position = Vector2(1014, 1053)
card_data = ExtResource("6_ocgqw")

[node name="Pulse_Oximeter" parent="DeckCards" unique_id=709664632 instance=ExtResource("2_sv1m6")]
position = Vector2(847, 1223)
card_data = ExtResource("12_i4jil")

[node name="Pulse_Oximeter2" parent="DeckCards" unique_id=1352564036 instance=ExtResource("2_sv1m6")]
position = Vector2(847, 1223)
card_data = ExtResource("12_i4jil")

[node name="Syringe" parent="DeckCards" unique_id=1912420957 instance=ExtResource("2_sv1m6")]
position = Vector2(1176, 1059)
card_data = ExtResource("17_m1oc7")

[node name="Syringe2" parent="DeckCards" unique_id=2100654418 instance=ExtResource("2_sv1m6")]
position = Vector2(1176, 1059)
card_data = ExtResource("17_m1oc7")

[node name="Thermometer" parent="DeckCards" unique_id=1337909347 instance=ExtResource("2_sv1m6")]
position = Vector2(839.99994, 1054)
card_data = ExtResource("18_kbe8o")

[node name="Thermometer2" parent="DeckCards" unique_id=2014866927 instance=ExtResource("2_sv1m6")]
position = Vector2(839.99994, 1054)
card_data = ExtResource("18_kbe8o")

[node name="Heart_Monitor" parent="DeckCards" unique_id=219542225 instance=ExtResource("2_sv1m6")]
position = Vector2(665, 1225)
card_data = ExtResource("7_jbgew")

[node name="Heart_Monitor2" parent="DeckCards" unique_id=2126091384 instance=ExtResource("2_sv1m6")]
position = Vector2(665, 1225)
card_data = ExtResource("7_jbgew")

[node name="Stethoscope" parent="DeckCards" unique_id=799111730 instance=ExtResource("2_sv1m6")]
position = Vector2(1024, 1226)
card_data = ExtResource("15_426vi")

[node name="Stethoscope2" parent="DeckCards" unique_id=1516171087 instance=ExtResource("2_sv1m6")]
position = Vector2(1024, 1226)
card_data = ExtResource("15_426vi")

[node name="Analog_Blood_Pressure_Monitor" parent="DeckCards" unique_id=1764918846 instance=ExtResource("2_sv1m6")]
position = Vector2(1197, 1218)
card_data = ExtResource("4_attvq")

[node name="Analog_Blood_Pressure_Monitor2" parent="DeckCards" unique_id=335123528 instance=ExtResource("2_sv1m6")]
position = Vector2(1197, 1218)
card_data = ExtResource("4_attvq")

[node name="Electronic_Blood_Pressure_Monitor" parent="DeckCards" unique_id=1033019311 instance=ExtResource("2_sv1m6")]
position = Vector2(1357, 1225)
card_data = ExtResource("5_bneo8")

[node name="Electronic_Blood_Pressure_Monitor2" parent="DeckCards" unique_id=56754018 instance=ExtResource("2_sv1m6")]
position = Vector2(1357, 1225)
card_data = ExtResource("5_bneo8")

[node name="Scalpel" parent="DeckCards" unique_id=1149836362 instance=ExtResource("2_sv1m6")]
position = Vector2(1862, 1066)
card_data = ExtResource("14_1gdd5")

[node name="Scalpel2" parent="DeckCards" unique_id=607968187 instance=ExtResource("2_sv1m6")]
position = Vector2(1862, 1066)
card_data = ExtResource("14_1gdd5")

[node name="Otoscope" parent="DeckCards" unique_id=1166925053 instance=ExtResource("2_sv1m6")]
position = Vector2(1518, 1227)
card_data = ExtResource("9_jhsr3")

[node name="Otoscope2" parent="DeckCards" unique_id=1666393140 instance=ExtResource("2_sv1m6")]
position = Vector2(1518, 1227)
card_data = ExtResource("9_jhsr3")

[node name="Reflex_Hammer" parent="DeckCards" unique_id=102411366 instance=ExtResource("2_sv1m6")]
position = Vector2(1688, 1227)
card_data = ExtResource("13_jai3c")

[node name="Reflex_Hammer2" parent="DeckCards" unique_id=708631564 instance=ExtResource("2_sv1m6")]
position = Vector2(1688, 1227)
card_data = ExtResource("13_jai3c")

[node name="Surgical_Rake_Retractor" parent="DeckCards" unique_id=261269465 instance=ExtResource("2_sv1m6")]
position = Vector2(1862, 1227)
card_data = ExtResource("16_naigu")

[node name="Surgical_Rake_Retractor2" parent="DeckCards" unique_id=2079324557 instance=ExtResource("2_sv1m6")]
position = Vector2(1862, 1227)
card_data = ExtResource("16_naigu")

[connection signal="pressed" from="UIElements/StartGameButton" to="." method="_on_shuffle_pressed"]
